@@ -1,3 +1,13 @@
+2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Debugger.addin.xml, MonoDevelop.Debugger.mdp,
+	  Makefile.am, MonoDevelop.Debugger/WatchPad.cs,
+	  MonoDevelop.Debugger/ObjectValueTreeView.cs,
+	  MonoDevelop.Debugger/Initializer.cs,
+	  MonoDevelop.Debugger/DisasemblyView.cs,
+	  MonoDevelop.Debugger/StackTracePad.cs: Improved call stack view.
+	  Implemented disassemble view.
+
 2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Debugger.addin.xml: Bump MD version.
